--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <p>💼 150+ Projects Completed</p>
         <p>😊 50+ Happy Clients</p>
         <p>☕ 1200+ Cups of Coffee</p>
+        <p>Type "help" for more info</p>
       </div>
 
       <p class="links">
