--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <canvas id="matrix-canvas"></canvas>
 
   <div class="container">
+    <!-- Terminal comes FIRST in HTML -->
+    <div class="terminal">
+      <div id="output"></div>
+      <div class="input-line">
+        <span class="prompt">ghost@dev:~$</span>
+        <input type="text" id="input" autofocus autocomplete="off" />
+      </div>
+    </div>
+
+    <!-- Profile comes SECOND in HTML -->
     <div class="profile">
       <img src="profile.jpg" alt="Joshua Muhoro" />
 
@@ -30,14 +40,6 @@
         🔗 <a href="https://github.com/Joshkihiu" target="_blank">GitHub</a><br />
         📬 <a href="mailto:joshuamuhoro06@gmail.com">Email Me</a>
       </p>
-    </div>
-
-    <div class="terminal">
-      <div id="output"></div>
-      <div class="input-line">
-        <span class="prompt">ghost@dev:~$</span>
-        <input type="text" id="input" autofocus autocomplete="off" />
-      </div>
     </div>
   </div>
 
