Remove emojis from profile section in index.html

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="profile">
       <img src="profile.jpg" alt="Joshua Muhoro" />
 
-      <h2>👋 Hello, I'm Joshua Muhoro</h2>
-      <p>🎓 Computer Science Student<br />🛡️ Cybersecurity Enthusiast</p>
+      <h2>Hello, I'm Joshua Muhoro</h2>
+      <p>Computer Science Student<br />🛡️ Cybersecurity Enthusiast</p>
 
-      <p>📍 Nairobi, Kenya<br />📞 0727867559<br />📧 joshuamuhoro06@gmail.com</p>
+      <p>Nairobi, Kenya<br />📞 0727867559<br />📧 joshuamuhoro06@gmail.com</p>
 
       <div class="stats">
-        <p>🧠 2+ Years Experience</p>
-        <p>💼 150+ Projects Completed</p>
-        <p>😊 5+ Happy Clients</p>
+        <p>2+ Years Experience</p>
+        <p>150+ Projects Completed</p>
+        <p>5+ Happy Clients</p>
         <p>☕ 120+ Cups of Coffee</p>
         <p>Type "help" for more info</p>
       </div>
