Fix formatting of links in index.html

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </div>
 
       <p class="links">
-        🔗 <a href="https://github.com/Joshkihiu" target="_blank">GitHub</a><br />
-        📬 <a href="mailto:joshuamuhoro06@gmail.com">Email Me</a>
+         <a href="https://github.com/Joshkihiu" target="_blank">GitHub</a><br />
+         <a href="mailto:joshuamuhoro06@gmail.com">Email Me</a>
       </p>
     </div>
 
