--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h2>Hello, I'm Joshua Muhoro</h2>
       <p>Computer Science Student<br />Cybersecurity Enthusiast</p>
 
-      <p>Nairobi, Kenya<br />📞 0727867559<br />joshuamuhoro06@gmail.com</p>
+      <p>Nairobi, Kenya<br />0727867559<br />joshuamuhoro06@gmail.com</p>
 
       <div class="stats">
         <p>2+ Years Experience</p>
